# midisister

./: .gitignore  CMakeLists.txt  README.md  TODO.md  midisister.fzz  sendmapping.py  vcsetup.bat
mappings/: hydra0.txt  hydra1.txt  nts1.txt
midisister/: CMakeLists.txt  config.cc  config.h  flash_save.cc  flash_save.h  midi.cc  midi.h  midisister.cc  nunchuk.cc  nunchuk.h  util.cc  util.h
